server/TinTin/TinTin/src/main/java/com/example/TinTin/util/error/BusinessException.java
package com.example.TinTin.util.error;

public class BusinessException extends RuntimeException {
    public BusinessException(String message) {
        super(message);
    }
}
